Tasks front almost done (Post doesn't update status)

--- a/Frontas/Pages/EventPage.cshtml
+++ b/Frontas/Pages/EventPage.cshtml
@@ -158,12 +158,10 @@
                     @foreach (var uzduotis in Model.TaskResponse)
                     {
                         <div class="col-md-3">
-                            <a href="/EventTaskPage?id=@uzduotis.Id" class="event-link">
+                            <a href="/EventTaskPage?id=@uzduotis.Id&eventId=@uzduotis.EventId" class="event-link">
                                 <div class="task">
                                     <h4>@uzduotis.Title</h4>
-                                    <p>@uzduotis.Description</p>
-                                    <p>Data: @(uzduotis.ScheduledTime?.ToString("yyyy-MM-dd") ?? "Not Scheduled")</p>
-                                    <p>Atsakingas darbuotojas: <i>Placeholder darbuotojas</i></p>
+                                    <p>Status: @uzduotis.Status</p>
                                 </div>
                             </a>
                         </div>
