small fixes for taskservice update

--- a/Frontas/Pages/EventTaskPage.cshtml
+++ b/Frontas/Pages/EventTaskPage.cshtml
@@ -6,12 +6,14 @@
 
 @if (Model.TaskResponse != null)
 {
-    <a href="/EventPage?id=@Model.TaskResponse.EventId" class="event-link"><h3>Grįžti prie renginio</h3></a>
-    <a href="/ModTaskPageModel?id=@Model.TaskResponse.Id&eventId=@Model.TaskResponse.EventId" class="user-info-link">
+
+    <a href="/EventPage?id=@Model.TaskResponse?.EventId" class="event-link"><h3>Grįžti prie renginio</h3></a>
+    <a href="/ModTaskPageModel?id=@Model.TaskResponse?.Id&eventId=@Model.TaskResponse?.EventId" class="user-info-link">
         <div class="event-details">
-            <h1>@(Model.TaskResponse?.Title ?? "Unknown Task")</h1>
+            <h2>@(Model.TaskResponse?.Title ?? "Unknown Task")</h2>
             <p>Užduoties aprašymas: @(Model.TaskResponse?.Description ?? "No description provided")</p>
             <p>Atlikti iki: @(Model.TaskResponse?.ScheduledTime?.ToString("yyyy-MM-dd") ?? "Not Scheduled")</p>
+            <p>Užduoties būsena: @Model.TaskResponse?.Status</p>
             <p>Atsakingas darbuotojas: <i>Placeholder darbuotojas</i></p>
         </div>
     </a>
