--- a/Frontas/wwwroot/css/site.css
+++ b/Frontas/wwwroot/css/site.css
@@ -90,7 +90,7 @@ button {
     box-shadow: 0 3px 10px var(--text-color);
 }
 
-    .event:hover, .user-info:hover, .create-event:hover, .event-details:hover, button:hover, .event-details:hover, .task:hover {
+    .event:hover, .user-info:hover, .create-event:hover, .event-details:hover, button:hover, .event-details:hover, .task:hover, .participant:hover {
         background-color: var(--accent-hover-color);
         color: var(--form-bg-color);
     }
