--- a/Frontas/Pages/EventPage.cshtml
+++ b/Frontas/Pages/EventPage.cshtml
@@ -28,7 +28,18 @@
 
         <div class="row">
             <div class="col-md-8">
-                @* @foreach (var user in Model.Users)
+                @foreach (var dalyvis in Model.EmployeeResponse)
+                {
+                    <div class="col-md-3">
+                        <a href="/EmployeePage?id=@dalyvis.Id&eventid=@Model.EventResponse.Id" class="event-link">
+                            <div class="user">
+                                <h4>@dalyvis.FirstName</h4>
+                                <p>@dalyvis.LastName</p>
+                            </div>
+                        </a>
+                    </div>
+                }
+                @*@foreach (var user in Model.Users)
                 {
                     <a href="/EventPage?id=@user.Id" class="user-info-link">
                         <!--neviekia-->
@@ -53,10 +64,18 @@
             <div class="col-md-4">
                 <div class="addEmployee">
                         <h3>Pridėti darbuotoją</h3>
-                    <form method="post" id="addFormEmployee" style="display: none;">
+                    <form method="post" asp-page-handler="AddEmployee" id="addFormEmployee" style="display: none;">
+                        <input type="hidden" name="EventId" value="@Model.EventId" />
                         <div class="form-group">
                     <select id="taskDropdown" class="form-control">
                         <option value="">...</option>
+                                @foreach (var participant in Model.AllEmployees)
+                                {
+                                    @if (!Model.EmployeeResponse.Any(p => participant.Id == p.Id))
+                                    {
+                                        <option value="@participant.Id">@participant.FirstName @participant.LastName</option>
+                                    }
+                                }
                     </select>
                         </div>
                         <button type="submit" class="btn btn-primary">Kurti</button>
@@ -64,22 +83,15 @@
                     </div>
                 <div class="addToEventEmployee">
                     <h3>Kurti darbuotoją</h3>
-                    <form method="post" id="createEventFormEmployee" style="display: none;">
+                    <form method="post" asp-page-handler="CreateEmployee" id="createEventFormEmployee" style="display: none;">
+                        <input type="hidden" name="EventId" value="@Model.EventId" />
                         <div class="form-group">
-                            <label for="title">Pavadinimas</label>
-                            <input type="text" id="title" name="Title" class="form-control" required />
+                            <label for="firstName">Vardas</label>
+                            <input type="text" id="firstName" name="FirstName" class="form-control" required />
                         </div>
                         <div class="form-group">
-                            <label for="description">Aprašymas</label>
-                            <textarea id="description" name="Description" class="form-control"></textarea>
-                        </div>
-                        <div class="form-group">
-                            <label for="startDate">Pradžios data</label>
-                            <input type="date" id="startDate" name="StartDate" class="form-control" required />
-                        </div>
-                        <div class="form-group">
-                            <label for="endDate">Pabaigos data</label>
-                            <input type="date" id="endDate" name="EndDate" class="form-control" required />
+                            <label for="lastName">Pavardė</label>
+                            <input type="text" id="lastName" name="LastName" class="form-control" required />
                         </div>
                     <button type="submit" class="btn btn-primary">Kurti</button>
                 </form>
