--- a/Frontas/Pages/ModParticipantPage.cshtml
+++ b/Frontas/Pages/ModParticipantPage.cshtml
@@ -17,8 +17,11 @@
             <h1>Redaguoti dalyvį</h1>
             <form method="post" asp-page-handler="Delete" style="display: inline;">
                 <input type="hidden" name="ParticipantResponse.Id" value="@Model.ParticipantResponse.Id" />
+                <input type="hidden" name="RequestMethod" value="DELETE" />
                 <button type="submit" class="deleteHover">Ištrinti dalyvį iš duomenų bazės</button>
             </form>
+
+
         </div>
 
         <form method="post">
