--- a/Frontas/wwwroot/css/site.css
+++ b/Frontas/wwwroot/css/site.css
@@ -90,10 +90,10 @@ button {
     box-shadow: 0 3px 10px var(--text-color);
 }
 
-    .event:hover, .user-info:hover, .create-event:hover, .event-details:hover, button:hover, .event-details:hover, .task:hover, .participant:hover {
-        background-color: var(--accent-hover-color);
-        color: var(--form-bg-color);
-    }
+.event:hover, .user-info:hover, .create-event:hover, .event-details:hover, button:hover, .user:hover, .event-details:hover, .task:hover, .participant:hover {
+    background-color: var(--accent-hover-color);
+    color: var(--form-bg-color);
+}
 
 
 .sidebar {
@@ -184,7 +184,7 @@ button {
         background-color: #0056b3;
     }
 
-.participant {
+.participant, .user {
     cursor: pointer;
     border: none;
     padding: 20px;
