--- a/Frontas/Pages/EmployeePage.cshtml
+++ b/Frontas/Pages/EmployeePage.cshtml
@@ -14,19 +14,18 @@
     else if (Model.EmployeeResponse != null)
     {
         <div class="modHead">
-            <a asp-page="./Index" class="Employee-info-link">
-                <h1>..Visi renginiai</h1>
-            </a>
+            <a href="/EventPage?id=@Model.EventId" class="user-info-link"><h3>Grįžti prie renginio</h3></a>
+
             <form method="post" asp-page-handler="Delete" style="display: inline;">
                 <input type="hidden" name="EmployeeId" value="@Model.EmployeeResponse.Id" />
                 <input type="hidden" name="eventId" value="@Request.Query["eventId"]" />
-                <button type="submit" class="deleteHover">Pašalinti dalyvį iš renginio</button>
+                <button type="submit" class="deleteHover">Pašalinti darbuotoją iš renginio</button>
             </form>
         </div>
         <a href="/ModEmployeePageModel?id=@Model.EmployeeResponse.Id" class="Employee-info-link">
-            <div class="event-details">
-                <h1>@Model.EmployeeResponse.FirstName</h1>
-                <p>@Model.EmployeeResponse.LastName</p>
+            <div class="employee-details">
+                <h1>@Model.EmployeeResponse.FirstName&nbsp;</h1>
+                <h1>@Model.EmployeeResponse.LastName</h1>
             </div>
         </a>
     }
