--- a/Frontas/Pages/EventTaskPage.cshtml
+++ b/Frontas/Pages/EventTaskPage.cshtml
@@ -19,9 +19,9 @@
     <a href="/ModTaskPageModel?id=@Model.TaskResponse.Id&eventId=@Model.TaskResponse.EventId" class="user-info-link">
         <div class="event-details">
             <h2>@(Model.TaskResponse.Title ?? "Unknown Task")</h2>
-            <p>Užduoties aprašymas: @(Model.TaskResponse.Description ?? "No description provided")</p>
+            <p>@(Model.TaskResponse.Description ?? "No description provided")</p>
             <p>Atlikti iki: @(Model.TaskResponse.ScheduledTime?.ToString("yyyy-MM-dd") ?? "Not Scheduled")</p>
-            <p>Užduoties būsena: @Model.TaskResponse.Status</p>
+            <p>@Model.TaskResponse.Status</p>
             <p>Atsakingas darbuotojas: <i>Placeholder darbuotojas</i></p>
         </div>
     </a>
