--- a/Frontas/Pages/EmployeePage.cshtml
+++ b/Frontas/Pages/EmployeePage.cshtml
@@ -22,8 +22,9 @@
                 <button type="submit" class="deleteHover">Pašalinti darbuotoją iš renginio</button>
             </form>
         </div>
+        <br />
         <a href="/ModEmployeePageModel?id=@Model.EmployeeResponse.Id" class="Employee-info-link">
-            <div class="employee-details">
+            <div class="event-details">
                 <h1>@Model.EmployeeResponse.FirstName&nbsp;</h1>
                 <h1>@Model.EmployeeResponse.LastName</h1>
             </div>
