--- a/Frontas/wwwroot/css/site.css
+++ b/Frontas/wwwroot/css/site.css
@@ -90,10 +90,10 @@ button {
     box-shadow: 0 3px 10px var(--text-color);
 }
 
-.event:hover, .user-info:hover, .create-event:hover, .event-details:hover, employee-details:hover, button:hover, .user:hover, .event-details:hover, .task:hover, .participant:hover {
-    background-color: var(--accent-hover-color);
-    color: var(--form-bg-color);
-}
+    .event:hover, .user-info:hover, .create-event:hover, employee-details:hover, button:hover, .user:hover, .event-details:hover, .task:hover, .participant:hover {
+        background-color: var(--accent-hover-color);
+        color: var(--form-bg-color);
+    }
 
 
 .sidebar {
@@ -118,14 +118,14 @@ button {
     width: 100%;
 }
 
-.event-link, .user-info-link, .create-event-link, .eventTask-link {
+.event-link, .user-info-link, .create-event-link, .eventTask-link, .Employee-info-link {
     border: none;
     display: block;
     text-decoration: none;
     color: inherit;
 }
 
-.event-details {
+.event-details, .employee-details {
     border: none;
     padding: 20px;
     margin-bottom: 20px;
@@ -141,20 +141,6 @@ button {
     align-items: center;
 }
 
-.employee-details {
-    border: none;
-    padding: 20px;
-    margin-bottom: 20px;
-    color: var(--text-color);
-    border-radius: var(--default-radius);
-    transition: background-color 0.3s;
-    box-shadow: 0 3px 10px var(--text-color);
-    padding: 20px;
-    border-radius: 8px;
-    margin-bottom: 40px;
-    display: flex;
-    align-items: center;
-}
 
 .section {
     margin-bottom: 40px;
