--- a/Frontas/Pages/EmployeePage.cshtml
+++ b/Frontas/Pages/EmployeePage.cshtml
@@ -22,7 +22,7 @@
                 <button type="submit" class="deleteHover">Pašalinti darbuotoją iš renginio</button>
             </form>
         </div>
-        <a href="/ModEmployeePageModel?id=@Model.EmployeeResponse.Id" class="Employee-info-link">
+        <a href="/ModEmployeePageModel?id=@Model.EmployeeResponse.Id&eventId=@Model.EventId" class="Employee-info-link">
             <div class="employee-details">
                 <h1>@Model.EmployeeResponse.FirstName&nbsp;</h1>
                 <h1>@Model.EmployeeResponse.LastName</h1>
