--- a/Frontas/Pages/EventPage.cshtml
+++ b/Frontas/Pages/EventPage.cshtml
@@ -14,7 +14,7 @@
     else if (Model.EventResponse != null)
     {
         <a asp-page="./Index" class="user-info-link">
-            <h1>..Visi renginiai</h1>
+            <h3>Grįžti į renginius</h3>
         </a>
 
         <a href="/ModEventPageModel?id=@Model.EventResponse.Id" class="user-info-link">
