--- a/Frontas/Pages/Index.cshtml
+++ b/Frontas/Pages/Index.cshtml
@@ -24,6 +24,12 @@
             <a asp-page="./UserInfoPage" class="user-info-link">
                 <div class="user-info">
                     <h2>Vartotojo pavadinimas</h2>
+                    @*<a href="/UserPage?id=@dalyvis.Id" class="event-link">
+                        <div class="user">
+                            <h4>@dalyvis.FirstName</h4>
+                            <p>@dalyvis.LastName</p>
+                        </div>
+                    </a>*@
                 </div>
             </a>
             <div class="createEvent">
