--- a/Frontas/Pages/EmployeePage.cshtml
+++ b/Frontas/Pages/EmployeePage.cshtml
@@ -37,7 +37,7 @@
             @foreach (var uzduotis in Model.TaskResponse)
             {
                 <div class="col-md-3">
-                    <a href="/EventTaskPage?id=@uzduotis.Id&eventId=@uzduotis.EventId" class="event-link">
+                    <a href="/EventTaskPage?id=@uzduotis.Id&eventId=@Model.EventId" class="event-link">
                         <div class="task">
                             <h4>@uzduotis.Title</h4>
                             <p>Status: @uzduotis.Status</p>
