pasalinti mygtukas better (task assigned employees)

--- a/Frontas/Pages/EventTaskPage.cshtml
+++ b/Frontas/Pages/EventTaskPage.cshtml
@@ -36,7 +36,7 @@
                                     <input type="hidden" name="userId" value="@employee.Id" />
                                     <input type="hidden" name="taskId" value="@Model.TaskResponse.Id" />
                                     <input type="hidden" name="eventId" value="@Model.EventId" />
-                                    <button type="submit" class="btn btn-link">Pašalinti</button>
+                                    <button type="submit">Pašalinti</button>
                                 </form>
                             </li>
                         }
