--- a/Frontas/Pages/Index.cshtml
+++ b/Frontas/Pages/Index.cshtml
@@ -31,9 +31,11 @@
             }
             else
             {
-                <div class="user-info">
-                    <h2>Loading user info...</h2>
-                </div>
+                <a href="/UserPage?id=GlobalParameters.UserInfo.Id" class="user-info-link">
+                    <div class="user-info">
+                        <h2>GlobalParameters.UserInfo.FirstName GlobalParameters.UserInfo.LastName</h2>
+                    </div>
+                </a>
             }
             <div class="createEvent">
                 <h3>Kurti renginį</h3>
