--- a/Frontas/Pages/Login.cshtml
+++ b/Frontas/Pages/Login.cshtml
@@ -8,7 +8,7 @@
     <h1 class="text-center">Prisijungimas</h1>
     <form method="post" class="form-signin">
         <div class="form-group">
-            <label for="username">Vartotojo vardas</label>
+            <label for="username">Vartotojo paštas</label>
             <input type="text" class="form-control" id="username" name="username" required />
         </div>
         <div class="form-group">
